--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
+    "vue-cli": "^2.9.1",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
